// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not render drilldown for estimated duplications 1`] = `
<div
  id="component-measures"
>
  <Suggestions
    suggestions="component_measures"
  />
  <Helmet
    defer={false}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="Coverage"
  />
  <div
    className="layout-page"
  >
    <ScreenPositionHelper
      className="layout-page-side-outer"
    >
      <Component />
    </ScreenPositionHelper>
    <div
      className="layout-page-main"
    >
      <div
        className="layout-page-main-inner"
      >
        <div
          className="note"
        >
          component_measures.details_are_not_available
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render a message when there are no measures 1`] = `
<div
  id="component-measures"
>
  <Suggestions
    suggestions="component_measures"
  />
  <Helmet
    defer={false}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="Coverage"
  />
  <MeasuresEmpty />
</div>
`;

exports[`should render a warning message when user does not have access to all projects whithin a Portfolio: Measure menu with warning (ScreenPositionHelper) 1`] = `
<div
  className="layout-page-side-outer"
>
  <div
    className="layout-page-side"
    style={
      {
        "top": 0,
      }
    }
  >
    <div
      className="layout-page-side-inner"
    >
      <Alert
        className="big-spacer-top big-spacer-right big-spacer-left it__portfolio_warning"
        variant="warning"
      >
        <Styled(div)>
          component_measures.not_all_measures_are_shown
          <HelpTooltip
            ariaLabel="component_measures.not_all_measures_are_shown.help"
            className="spacer-left"
            overlay="component_measures.not_all_measures_are_shown.help"
          />
        </Styled(div)>
      </Alert>
      <div
        className="layout-page-filters"
      >
        <Sidebar
          measures={
            [
              {
                "leak": undefined,
                "metric": {
                  "domain": "Coverage",
                  "id": "2",
                  "key": "coverage",
                  "name": "Coverage",
                  "type": "PERCENT",
                },
                "value": "80.0",
              },
            ]
          }
          selectedMetric="coverage"
          showFullMeasures={true}
          updateQuery={[Function]}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly 1`] = `
<div
  id="component-measures"
>
  <Suggestions
    suggestions="component_measures"
  />
  <Helmet
    defer={false}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="Coverage"
  />
  <div
    className="layout-page"
  >
    <ScreenPositionHelper
      className="layout-page-side-outer"
    >
      <Component />
    </ScreenPositionHelper>
    <MeasureContent
      branchLike={
        {
          "analysisDate": "2018-01-01",
          "excludedFromPurge": true,
          "isMain": true,
          "name": "master",
        }
      }
      metrics={
        {
          "coverage": {
            "domain": "Coverage",
            "id": "2",
            "key": "coverage",
            "name": "Coverage",
            "type": "PERCENT",
          },
          "duplicated_lines_density": {
            "domain": "Duplications",
            "id": "3",
            "key": "duplicated_lines_density",
            "name": "Duplicated Lines (%)",
            "type": "PERCENT",
          },
          "lines_to_cover": {
            "domain": "Coverage",
            "id": "1",
            "key": "lines_to_cover",
            "name": "Lines to Cover",
            "type": "INT",
          },
          "new_bugs": {
            "domain": "Reliability",
            "id": "4",
            "key": "new_bugs",
            "name": "New Bugs",
            "type": "INT",
          },
        }
      }
      onIssueChange={[Function]}
      requestedMetric={
        {
          "domain": "Coverage",
          "id": "2",
          "key": "coverage",
          "name": "Coverage",
          "type": "PERCENT",
        }
      }
      rootComponent={
        {
          "breadcrumbs": [],
          "key": "foo",
          "name": "Foo",
          "qualifier": "TRK",
          "qualityGate": {
            "isDefault": true,
            "key": "30",
            "name": "Sonar way",
          },
          "qualityProfiles": [
            {
              "deleted": false,
              "key": "my-qp",
              "language": "ts",
              "name": "Sonar way",
            },
          ],
          "tags": [],
        }
      }
      router={
        {
          "createHref": [MockFunction],
          "createPath": [MockFunction],
          "go": [MockFunction],
          "goBack": [MockFunction],
          "goForward": [MockFunction],
          "isActive": [MockFunction],
          "push": [MockFunction],
          "replace": [MockFunction],
          "setRouteLeaveHook": [MockFunction],
        }
      }
      selected=""
      updateQuery={[Function]}
      view="tree"
    />
  </div>
</div>
`;
